--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,10 @@ h1 {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     text-decoration: underline;
+    text-shadow: 2cap ;
 }
 
 .topic {
     text-align: center;
-    font-size: large;
+    font-size: 26px;
 }
